<resources>
    <string name="app_name">FID</string>
    <string name="carregando">Carregando…</string>
    <string name="imagemLogo">Logo do FID</string>
    <string name="digiteCPF">Digite seu CPF</string>
    <string name="digiteSenha">Digite sua senha</string>
    <string name="bemvindoFID">Bem Vindo</string>
    <string name="logar">Entrar</string>
    <string name="esqueceuSenha">Esqueceu sua senha?</string>
    <string name="title_activity_eventos">Seus eventos</string>
    <string name="title_pagos">Pagos</string>
    <string name="title_nao_pagos">Não pagos</string>
    <string name="tvNaoPagos">Toque para pagar</string>
    <string name="title_meus_eventos">Meus eventos</string>
    <string name="configMenu">Configurações</string>
    <string name="perfilMenu">Editar perfil</string>
    <string name="deslogarMenu">Sair</string>
    <string name="addEvento">Adicionar evento</string>
    <string name="cadastrar">Não tem conta? Cadastre-se
        <u>aqui</u>
    </string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="cadastrarNome">Nome</string>
    <string name="cadastrarEmail">E-mail</string>
    <string name="cadastrarCPF">CPF</string>
    <string name="cadastrarSenha">Senha</string>
    <string name="cadastrarConfirmSenha">Confirme sua senha</string>
    <string name="cadastrarBotao">Cadastrar-se</string>
    <string name="cadastrarDataNasc">Data de nascimento</string>
    <string name="desejaSair">Aperte novamente para sair</string>
    <string name="usuarioInvalido">Usuário ou senha inválidos</string>
    <string name="title_activity_adicionar_evento">Adicionar um evento</string>
    <string name="codEvent">Digite o código do evento</string>
    <string name="adicionar">Adicionar</string>
    <string name="obsAdicionarEvento">Digite aqui o código do evento fornecido pelo dono do evento</string>
    <string name="errorGeneric">Ocorreu um erro, por favor tente novamente</string>
    <string name="eventNotFound">Evento não encontrado</string>
    <string name="eventName">Nome do evento: %1$s</string>
    <string name="eventDateInit">Data de início: %1$s</string>
    <string name="eventDateEnd">Data de término: %1$s</string>
    <string name="eventPrice">Preço: R$ %1$s</string>
    <string name="cancelado">Cancelado</string>
    <string name="informaçõesEvento">Informações do evento:</string>
    <string name="invalidEmail">Digite um e-mail válido</string>
    <string name="invalidCPF">Digite um CPF válido</string>
    <string name="invalidPassword">Sua senha deve conter entre 6 e 30 caracteres</string>
    <string name="cifrao">R$ %1$s</string>
    <string name="senhasDif">As senhas estão diferentes</string>
    <string name="eventConfirmacao">Deseja adiciona-lo?</string>
    <string name="qrcode">QRCode</string>
    <string name="salvar">Salvar</string>
    <string name="qrCodeMostre">Mostre ao atendente</string>
    <string name="favoritar">Favorito</string>
    <string name="imagem_do_evento">Imagem do evento</string>
    <string name="digite_cod_evento">Digite um código do evento</string>
    <string name="fid_authenticator">FID Authenticator</string>

</resources>
