<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" android:layout_marginStart="8dp"
              android:layout_marginTop="24dp" android:layout_marginEnd="8dp"
              android:layout_marginBottom="8dp"
              android:id="@+id/formEvento" android:visibility="visible">
    <TextView
            android:layout_width="match_parent" android:text="@string/eventName" android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" android:id="@+id/textViewNomeEvento" android:textSize="20sp"/>
    <TextView
            android:layout_width="match_parent" android:text="@string/eventDateInit"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" android:id="@+id/textViewDataIncio" android:textSize="20sp"/>
    <TextView
            android:layout_width="match_parent" android:text="@string/eventDateEnd"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" android:id="@+id/textViewDataFim" android:textSize="20sp"/>
    <TextView
            android:layout_width="match_parent" android:text="@string/eventPrice" android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" android:id="@+id/textViewPreco" android:textSize="20sp"/>

</LinearLayout>