<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".activities.LoginActivity">

    <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="0dp" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp" android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp" android:layout_alignParentBottom="true" android:layout_marginBottom="0dp">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:orientation="vertical">
            <ImageView
                    android:src="@drawable/logo_fid_playstore"
                    android:layout_width="193dp"
                    android:layout_height="152dp"
                    android:contentDescription="@string/imagemLogo"
                    android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/loginCPF"
                    android:inputType="number"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/digiteCPF"
                    android:autofillHints="@string/digiteCPF"
                    app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/BemVindo"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/digiteSenha"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/loginSenha"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:autofillHints="@string/digiteSenha" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginCPF" tools:ignore="UnusedAttribute"/>
            <TextView
                    android:text="@string/bemvindoFID"
                    android:textSize="40sp"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BemVindo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            />
            <Button
                    android:text="@string/logar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/logarButton" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/loginSenha" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/esqueceuSenha"
                    app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.211"/>
            <TextView
                    android:layout_width="196dp"
                    android:layout_height="33dp"
                    android:id="@+id/esqueceuSenha"
                    android:text="@string/esqueceuSenha"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.498" android:textAlignment="center"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/cadastrar"
            />
            <TextView
                    android:text="@string/cadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:id="@+id/cadastrar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</RelativeLayout>