<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_cadastro"
        tools:context=".activities.CadastroActivity" android:id="@+id/cadastroLayout">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical" android:gravity="center">
            <ImageView
                    android:src="@drawable/logo_fid_playstore"
                    android:layout_width="383dp"
                    android:layout_height="102dp"
                    android:contentDescription="@string/imagemLogo"
                    android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>

            <EditText
                    android:hint="@string/cadastrarNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cadastroNome"
                    android:textSize="21sp"
                    android:ems="10"
                    android:textAlignment="center"
                    android:inputType="text" tools:ignore="Autofill"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:hint="@string/cadastrarDataNasc"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/cadastroDataNasc"
                    android:textSize="21sp" android:textAlignment="center"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" tools:ignore="Autofill"
                    app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cadastroNome"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadastrarEmail"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:textSize="21sp"
                    android:id="@+id/cadastroEmail"
                    android:textAlignment="center" tools:ignore="Autofill"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cadastroDataNasc"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/cadastroCPF"
                    android:textAlignment="center" android:textSize="21sp"
                    android:hint="@string/cadastrarCPF" tools:ignore="Autofill"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cadastroEmail"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/cadastrarSenha"
                    android:id="@+id/cadastroSenha"
                    android:textAlignment="center" android:textSize="21sp" tools:ignore="Autofill"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cadastroCPF"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textSize="21sp" android:textAlignment="center"
                    android:hint="@string/cadastrarConfirmSenha"
                    android:id="@+id/cadastroConfirmSenha"
                    android:importantForAutofill="no" tools:ignore="UnusedAttribute"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/cadastroSenha" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:text="@string/cadastrarBotao"

                    android:layout_width="wrap_content"
                    android:id="@+id/cadastroBotao"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cadastroConfirmSenha"
                    app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="16dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>