<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_adicionar_evento"
        tools:context=".activities.AdicionarEventoActivity">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarAdicionarEvento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:visibility="gone"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/codEvent" android:textColor="#000"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="144dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/editTextCodEvento" android:importantForAutofill="no" android:textAlignment="center"
            tools:ignore="UnusedAttribute"/>
    <Button
            android:text="@string/adicionar"
            android:ems="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAdicionarEvento"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextCodEvento" app:layout_constraintHorizontal_bias="0.497"/>

    <TextView
            android:text="@string/obsAdicionarEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>